@@ -28,6 +28,8 @@ git-annex (5.20150529) UNRELEASED; urgency=medium
   * Fix bug that prevented enumerating locally present objects in repos
     tuned with annex.tune.objecthash1=true.
     Fixes: unused, object count in info, unannex.
+  * Improve url parsing to handle some urls containing illegal []
+    characters in their paths.
 
  -- Joey Hess <id@joeyh.name>  Sat, 30 May 2015 02:07:18 -0400
 
